--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
+    
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -16,7 +16,6 @@
         <a href="#contact">Contact</a>
     </nav>    
 
-    <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="image-background"></div>
@@ -29,7 +28,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>Hi, I’m Angel, a third-year IT student at USTP passionate about building tech solutions that improve efficiency and accessibility. I’m currently working on AcadEase, a student grading system, and a teacher loading system for junior high schools. I aim to develop innovative and user-friendly software. Outside of coding, I enjoy outdoor activities and cooking.  
@@ -37,19 +35,19 @@
             Let’s connect and create something great! 🚀</p>
     </section>
 
-    <!-- Activity Section -->
     <section id="activity" class="activity">
         <h2>My Activities</h2>
         <p>Explore my latest projects, academic work, and experiences.</p>
-        <button class="btn-activity" onclick="window.open('PIT1.html', '_blank')">Activity 1</button>
-        <button class="btn-activity" onclick="window.open('PIT2.html', '_blank')">Activity 2</button>
+        <button class="btn-activity" onclick="window.open('PIT1.html', '_blank')">Lab 3. HTML Structure</button>
+        <button class="btn-activity" onclick="window.open('PIT2.html', '_blank')">Lab 4. CSS Styling</button>
+        <button class="btn-activity" onclick="window.open('PIT2.html', '_blank')">Lab 5. Subjects Taken</button>
+        
 
         <div id="activity-content" class="hidden">
             <p>Here is some extra content that appears when you click the button!</p>
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:murillo.angelgrace@gmail.com">murillo.angelgrace@gmail.com</a></p>
