--- a/lab3.html
+++ b/lab3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="lab3.css">
     <style>
         body {
             font-family: 'DM Sans', sans-serif;
@@ -93,12 +93,6 @@
 </head>
 <body>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="act.html">Activities</a>
-    </nav>    
-
     <div class="container">
         <div class="profile-header">
             <div class="profile-image"></div>
@@ -139,11 +133,11 @@
             </ul>
         </div>
 
-        <!-- New Courses Section -->
-        <div class="section">
+        <section id="courses">
             <h2>My Courses</h2>
             <input type="text" id="searchBar" placeholder="Search courses...">
             <div id="courses-list"></div>
+        </section>
         </div>
     </div>
 
