--- a/act.html
+++ b/act.html
@@ -18,9 +18,10 @@
     <section class="activity">
         <h2>My Activities</h2>
         <p>Explore my latest projects, academic work, and experiences.</p>
-        <button class="btn-activity" onclick="window.open('lab1.html', '_blank')">Lab 3. HTML Structure</button>
-        <button class="btn-activity" onclick="window.open('lab2.html', '_blank')">Lab 4. CSS Styling</button>
-        <button class="btn-activity" onclick="window.open('lab3.html', '_blank')">Lab 5. Subjects Taken</button>
+        <button class="btn-activity" onclick="window.open('lab1.html', '_blank')">Activity 1: HTML Structure</button>
+        <button class="btn-activity" onclick="window.open('lab2.html', '_blank')">Activity 2: CSS Styling</button>
+        <button class="btn-activity" onclick="window.open('lab3.html', '_blank')">Activity 3: Subjects Taken</button>
+        <button class="btn-activity" onclick="window.open('lab4.html', '_blank')">Activity 4: Search bar for Subjects Taken </button>
     </section>
 
     <footer>
